--- a/index.html
+++ b/index.html
@@ -3,7 +3,48 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>ExploreEra</title>
+		<title>Explore Era</title>
+		<!-- ------------------------- google mulish font -------------------------- -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;600;700;800;900&display=swap"
+			rel="stylesheet"
+		/>
+		<!-- ---------------------------- font awesome ----------------------------- -->
+		<script
+			src="https://kit.fontawesome.com/e61df7a87d.js"
+			crossorigin="anonymous"
+		></script>
+		<!-- -------------------------- custom stylesheet -------------------------- -->
+		<link rel="stylesheet" href="./styles/style.css" />
 	</head>
-	<body></body>
+	<body class="font-mulish">
+		<header class="max-width">
+			<!-- ------------------------------- navbar -------------------------------- -->
+			<nav>
+				<div class="nav-left-side">
+					<div>
+						<img src="./Images/Group 40071.png" alt="" />
+					</div>
+					<h1 class="nav-title">
+						Explore
+						<span class="primary-color">Era</span>
+					</h1>
+				</div>
+				<div class="nav-link">
+					<li><a href="">Home</a></li>
+					<li><a href="">Packages</a></li>
+					<li><a href="">Testimonial</a></li>
+					<li><a href="">Blog</a></li>
+					<li><a href="">Contact</a></li>
+				</div>
+				<div class="nav-hamburger">
+					<i class="fa-solid fa-bars"></i>
+				</div>
+			</nav>
+		</header>
+		<main class="max-width"></main>
+		<footer></footer>
+	</body>
 </html>
