banner section added

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 					<div>
 						<img src="./Images/Group 40071.png" alt="" />
 					</div>
-					<h1 class="nav-title">
+					<h2 class="nav-title">
 						Explore
 						<span class="primary-color">Era</span>
-					</h1>
+					</h2>
 				</div>
 				<div class="nav-link">
 					<li><a href="">Home</a></li>
@@ -43,6 +43,38 @@
 					<i class="fa-solid fa-bars"></i>
 				</div>
 			</nav>
+
+			<!-- --------------------------- banner section ---------------------------- -->
+			<section class="banner-section relative-container">
+				<div class="banner-background"></div>
+				<div class="banner-content">
+					<div>
+						<h1 class="banner-title">Explore Your Travel</h1>
+						<p class="banner-description">
+							Explore Your Travel is a blog that showcases the adventures and
+							insights of a passionate traveler. Whether you are looking for
+							inspiration or entertainment.
+						</p>
+						<div class="banner-input-group">
+							<div class="banner-input-with-dropdown">
+								<input type="text" name="" id="" placeholder="Where go" />
+							</div>
+							<div class="banner-input-with-dropdown">
+								<input type="text" name="" id="" placeholder="When" />
+								<i class="fa-solid fa-chevron-down"></i>
+							</div>
+							<div class="banner-input-with-dropdown">
+								<input type="text" name="" id="" placeholder="Select Type" />
+								<i class="fa-solid fa-chevron-down"></i>
+							</div>
+							<button class="primary-btn banner-btn">
+								<i class="fa-solid fa-magnifying-glass"></i>
+								Find Now
+							</button>
+						</div>
+					</div>
+				</div>
+			</section>
 		</header>
 		<main class="max-width"></main>
 		<footer></footer>
