popular section added

--- a/index.html
+++ b/index.html
@@ -76,7 +76,52 @@
 				</div>
 			</section>
 		</header>
-		<main class="max-width"></main>
+		<main class="max-width">
+			<!-- ---------------------- our popular tours section ---------------------- -->
+			<section class="popular-section">
+				<div class="popular-content">
+					<h2 class="section-title">Our Popular Tours</h2>
+					<p class="section-description">
+						If you are looking for an unforgettable adventure, look no further
+						than our popular tours.
+					</p>
+
+					<ul>
+						<li>
+							Experience the best of both worlds: the convenience of a guided
+							tour and the flexibility of a personalized itinerary.
+						</li>
+						<li>
+							Explore the world’s most iconic attractions, from the ancient
+							ruins of Rome to the wildlife of Africa to the culture of Japan.
+						</li>
+						<li>
+							Enjoy comfortable accommodation, delicious meals, and expert
+							guides who will share their knowledge and passion with you.
+						</li>
+					</ul>
+					<p class="section-description">
+						Whether you want to explore the ancient ruins of Rome, experience
+						the wildlife of Africa, or discover the culture of Japan, we have
+						something for everyone. Our tours are designed to give you the best
+						of both worlds
+					</p>
+					<div>
+						<button class="primary-btn">Read More</button>
+					</div>
+				</div>
+				<div class="popular-img">
+					<img src="./Images/Rectangle 4.png" alt="" />
+				</div>
+			</section>
+		</main>
 		<footer></footer>
+		<!-- <script>
+			function scrollToBottom() {
+				window.scrollTo(0, document.body.scrollHeight);
+			}
+			history.scrollRestoration = "manual";
+			window.onload = scrollToBottom;
+		</script> -->
 	</body>
 </html>
