Your destination section added

--- a/index.html
+++ b/index.html
@@ -114,14 +114,53 @@
 					<img src="./Images/Rectangle 4.png" alt="" />
 				</div>
 			</section>
+
+			<!-- ----------------------- Choose Your Destination ----------------------- -->
+			<section class="destination-section">
+				<h2 class="section-title destination-title">Choose Your Destination</h2>
+				<p class="section-description destination-description">
+					Choosing a destination for a travel essay is not as easy as it may
+					seem. There are many factors to consider, such as your personal
+					interests, budget, time, and availability of information.
+				</p>
+				<div class="destination-img-container">
+					<div class="destination-first-line">
+						<div>
+							<img class="first-img" src="./Images/Rectangle 5.png" alt="" />
+							<p>Maldives</p>
+						</div>
+						<div>
+							<img class="sec-img" src="./Images/Rectangle 8.png" alt="" />
+							<p>Indonesia</p>
+						</div>
+					</div>
+					<div class="destination-sec-line">
+						<div>
+							<img class="thi-img" src="./Images/Rectangle 6.png" alt="" />
+							<p>Srilanka</p>
+						</div>
+						<div>
+							<img class="fou-img" src="./Images/Rectangle 7.png" alt="" />
+							<p>North America</p>
+						</div>
+						<div>
+							<img class="fif-img" src="./Images/Rectangle 9.png" alt="" />
+							<p>Kashmir</p>
+						</div>
+					</div>
+					<div class="destination-third-line">
+						<div>
+							<img class="six-img" src="./Images/Rectangle 11.png" alt="" />
+							<p>Bangladesh</p>
+						</div>
+						<div>
+							<img class="sev-img" src="./Images/Rectangle 10.png" alt="" />
+							<p>Bandarban</p>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer></footer>
-		<!-- <script>
-			function scrollToBottom() {
-				window.scrollTo(0, document.body.scrollHeight);
-			}
-			history.scrollRestoration = "manual";
-			window.onload = scrollToBottom;
-		</script> -->
 	</body>
 </html>
