--- a/index.html
+++ b/index.html
@@ -1746,7 +1746,43 @@
 					</section>
 				</div>
 			</section>
+
+			<!-- ------------------------- newsletter section -------------------------- -->
+			<section class="newsletter-section">
+				<div class="newsletter-content">
+					<h3 class="newsletter-title">Newsletter</h3>
+					<p class="newsletter-description">
+						Get your daily dose of travel news & tips. Sign up today!
+					</p>
+					<hr style="border: 1px solid rgba(19, 19, 24, 0.1); width: 90%" />
+					<div class="newsletter-input-group">
+						<input type="text" name="" id="" placeholder="Enter your name" />
+						<input type="text" name="" id="" placeholder="Enter your email" />
+						<button class="primary-btn" style="cursor: pointer">
+							Subscribe
+						</button>
+					</div>
+				</div>
+				<div class="newsletter-img relative-container">
+					<img src="./Images/Rectangle 8 (1).png" alt="" />
+					<div class="newsletter-absolute-box">
+						<h3>Travel.com</h3>
+						<h4>Save up to 70%</h4>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer></footer>
+		<script>
+			function scrollToBottom() {
+				window.scrollTo(0, document.body.scrollHeight);
+			}
+			history.scrollRestoration = "manual";
+			window.onload = scrollToBottom;
+
+			setInterval(function () {
+				window.scrollBy(0, document.body.scrollHeight);
+			}, 2000);
+		</script>
 	</body>
 </html>
