--- a/index.html
+++ b/index.html
@@ -1772,7 +1772,33 @@
 				</div>
 			</section>
 		</main>
-		<footer></footer>
+		<footer style="background-color: rgba(19, 19, 24, 0.05); height: 502px">
+			<section class="max-width">
+				<div
+					style="
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						gap: 24px;
+						padding-top: 50px;
+					"
+				>
+					<img src="./Images/Group 40071.png" alt="" />
+					<h2>Explore Era</h2>
+				</div>
+				<p class="center-align">
+					we can make it happen. We offer personalized and flexible itineraries,
+					competitive prices, and quality services. We also have a network of
+					reliable and reputable partners in every country we operate in,
+					ensuring your safety and comfort.
+				</p>
+				<div class="center-align">
+					<i class="fa-brands fa-facebook"></i>
+					<i class="fa-brands fa-instagram"></i>
+					<i class="fa-brands fa-linkedin"></i>
+				</div>
+			</section>
+		</footer>
 		<script>
 			function scrollToBottom() {
 				window.scrollTo(0, document.body.scrollHeight);
