--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;600;700;800;900&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900&display=swap"
 			rel="stylesheet"
 		/>
 		<!-- ---------------------------- font awesome ----------------------------- -->
@@ -1772,31 +1772,34 @@
 				</div>
 			</section>
 		</main>
-		<footer style="background-color: rgba(19, 19, 24, 0.05); height: 502px">
-			<section class="max-width">
-				<div
-					style="
-						display: flex;
-						justify-content: center;
-						align-items: center;
-						gap: 24px;
-						padding-top: 50px;
-					"
-				>
+		<!-- ------------------------------- footer -------------------------------- -->
+		<footer>
+			<section class="max-width footer">
+				<div class="footer-title">
 					<img src="./Images/Group 40071.png" alt="" />
 					<h2>Explore Era</h2>
 				</div>
-				<p class="center-align">
+				<p class="center-align section-description footer-description">
 					we can make it happen. We offer personalized and flexible itineraries,
 					competitive prices, and quality services. We also have a network of
 					reliable and reputable partners in every country we operate in,
 					ensuring your safety and comfort.
 				</p>
-				<div class="center-align">
-					<i class="fa-brands fa-facebook"></i>
-					<i class="fa-brands fa-instagram"></i>
-					<i class="fa-brands fa-linkedin"></i>
+				<div class="center-align footer-icon-container">
+					<a href="">
+						<i class="fa-brands fa-facebook"></i>
+					</a>
+					<a href="">
+						<i class="fa-brands fa-instagram"></i>
+					</a>
+					<a href="">
+						<i class="fa-brands fa-linkedin"></i>
+					</a>
 				</div>
+				<hr style="max-width: 80%" />
+				<p class="footer-copyright center-align">
+					<small>2017, All Rights Reserved.</small>
+				</p>
 			</section>
 		</footer>
 	</body>
