bonus section added

--- a/index.html
+++ b/index.html
@@ -235,6 +235,66 @@
 					</div>
 				</div>
 			</section>
+
+			<!-- -------------------- 20% discount _ bonus section --------------------- -->
+			<section class="twenty-section" id="s">
+				<div class="twenty-content">
+					<div class="twenty-item-content">
+						<div>
+							<img src="./Images/boat.jpg" alt="" />
+						</div>
+						<div>
+							<p class="twenty-date">
+								<span class="twenty-date-big">20</span>
+								January
+							</p>
+							<h2 class="twenty-title">Travel with boat</h2>
+							<p class="section-description twenty-description">
+								Traveling with a boat can be a serene and relaxing experience,
+								as well as a scenic and adventurous one. You can enjoy the
+								beauty of nature, witness stunning views.
+							</p>
+						</div>
+					</div>
+					<div class="twenty-item-content">
+						<div>
+							<img src="./Images/yellow car.jpg" alt="" />
+						</div>
+						<div>
+							<p class="twenty-date">
+								<span class="twenty-date-big">22</span>
+								January
+							</p>
+							<h2 class="twenty-title">Best tips to travel light</h2>
+							<p class="section-description twenty-description">
+								Traveling with a car can be a convenient and flexible way to
+								explore the world, as well as a fun and adventurous one. You can
+								drive at your own pace.
+							</p>
+						</div>
+					</div>
+					<div class="twenty-item-content">
+						<div>
+							<img src="./Images/river.jpg" alt="" />
+						</div>
+						<div>
+							<p class="twenty-date">
+								<span class="twenty-date-big">25</span>
+								January
+							</p>
+							<h2 class="twenty-title">Mountain travel</h2>
+							<p class="section-description twenty-description">
+								Mountain travel is a type of adventure travel that involves
+								exploring high-altitude regions, such as the Himalayas, the
+								Alps, the Andes, or the Rockies.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="twenty-img">
+					<img src="./Images/sea.jpg" alt="" />
+				</div>
+			</section>
 		</main>
 		<!-- ------------------------------- footer -------------------------------- -->
 		<footer>
@@ -266,16 +326,5 @@
 				</p>
 			</section>
 		</footer>
-		<script>
-			function scrollToBottom() {
-				window.scrollTo(0, document.body.scrollHeight);
-			}
-			history.scrollRestoration = "manual";
-			window.onload = scrollToBottom;
-
-			// setInterval(function () {
-			// 	window.scrollBy(0, document.body.scrollHeight);
-			// }, 2000);
-		</script>
 	</body>
 </html>
