deals & discount section added

--- a/index.html
+++ b/index.html
@@ -211,6 +211,97 @@
 				</div>
 			</section>
 
+			<!-- ---------------------- Deals & Discounts section ---------------------- -->
+			<section class="deals-section">
+				<h2 class="section-title center-align">Deals & Discounts</h2>
+				<p class="section-description center-align deals-description">
+					Travel deals and discounts are offers that help travelers save money
+					on their trips. They can include cheap flights, hotel discounts, car
+					rental deals
+				</p>
+				<div class="deals-tour-container relative-container">
+					<img src="./Images/Group 39.png" alt="" />
+					<div class="deals-absolute-right">
+						<div class="deals-time">
+							<div class="flex-container">
+								<img src="./Images/Frame.png" alt="" />
+								<p>7 Day / 6 Night</p>
+							</div>
+							<div class="flex-container">
+								<img src="./Images/user.png" alt="" />
+								<p>Max : 10</p>
+							</div>
+							<div class="flex-container">
+								<img src="./Images/location.png" alt="" />
+								<p>Malaysia</p>
+							</div>
+						</div>
+
+						<h3 class="deals-title">Tour To Satorini</h3>
+						<p>
+							Travel deals and discounts can help you plan your dream vacation
+							without breaking the bank.
+						</p>
+						<h4 class="deals-price">Price: $1300-$1500</h4>
+						<button class="primary-btn">Book Now</button>
+					</div>
+				</div>
+				<div class="deals-tour-container relative-container">
+					<img src="./Images/Group 39.png" alt="" />
+					<div class="deals-absolute-right deals-absolute-left">
+						<div class="deals-time">
+							<div class="flex-container">
+								<img src="./Images/Frame.png" alt="" />
+								<p>7 Day / 6 Night</p>
+							</div>
+							<div class="flex-container">
+								<img src="./Images/user.png" alt="" />
+								<p>Max : 10</p>
+							</div>
+							<div class="flex-container">
+								<img src="./Images/location.png" alt="" />
+								<p>Malaysia</p>
+							</div>
+						</div>
+
+						<h3 class="deals-title">Tour To Satorini</h3>
+						<p>
+							Travel deals and discounts can help you plan your dream vacation
+							without breaking the bank.
+						</p>
+						<h4 class="deals-price">Price: $1300-$1500</h4>
+						<button class="primary-btn">Book Now</button>
+					</div>
+				</div>
+				<div class="deals-tour-container relative-container">
+					<img src="./Images/Group 39.png" alt="" />
+					<div class="deals-absolute-right">
+						<div class="deals-time">
+							<div class="flex-container">
+								<img src="./Images/Frame.png" alt="" />
+								<p>7 Day / 6 Night</p>
+							</div>
+							<div class="flex-container">
+								<img src="./Images/user.png" alt="" />
+								<p>Max : 10</p>
+							</div>
+							<div class="flex-container">
+								<img src="./Images/location.png" alt="" />
+								<p>Malaysia</p>
+							</div>
+						</div>
+
+						<h3 class="deals-title">Tour To Satorini</h3>
+						<p>
+							Travel deals and discounts can help you plan your dream vacation
+							without breaking the bank.
+						</p>
+						<h4 class="deals-price">Price: $1300-$1500</h4>
+						<button class="primary-btn">Book Now</button>
+					</div>
+				</div>
+			</section>
+
 			<!-- ------------------------- newsletter section -------------------------- -->
 			<section class="newsletter-section">
 				<div class="newsletter-content">
@@ -237,7 +328,7 @@
 			</section>
 
 			<!-- -------------------- 20% discount _ bonus section --------------------- -->
-			<section class="twenty-section" id="s">
+			<section class="twenty-section">
 				<div class="twenty-content">
 					<div class="twenty-item-content">
 						<div>
